Module no 02 - Python for Data Scientists

--- a/Module no 02- Python for Data Scientists/Pandas for Data Scientists/Lec-2.09_00(Pandas-00-Introduction).ipynb
+++ b/Module no 02- Python for Data Scientists/Pandas for Data Scientists/Lec-2.09_00(Pandas-00-Introduction).ipynb
@@ -8,7 +8,7 @@
     "---   \n",
     "\n",
     "<h1 align=\"center\">Introduction to Data Analyst and Data Science for beginners</h1>\n",
-    "<h1 align=\"center\">Lecture no 3.09-01(Pandas-00)</h1>\n",
+    "<h1 align=\"center\">Lecture no 2.09-01(Pandas-00)</h1>\n",
     "\n",
     "---\n",
     "<h3><div align=\"right\">Ehtisham Sadiq</div></h3>    "
@@ -43,7 +43,8 @@
    "id": "5d881437",
    "metadata": {},
    "source": [
-    "> **A Pandas Dataframe is a 2-dimensional labeled data structure (like SQL table) with heterogeneously typed columns, having both a row and a column index.**"
+    ">-  **A Pandas Dataframe is a 2-dimensional labeled data structure (like SQL table) with heterogeneously typed columns, having both a row and a column index.**\n",
+    ">-  **In short Pandas is a Software Libarary in Computer Programming and it is written for the Python Programming Language its work to do `data analysis and manipulation.`**"
    ]
   },
   {
