Module no 02 - Python for Data Scientists

--- a/Module no 02- Python for Data Scientists/Pandas for Data Scientists/Lec-2.09_00(Pandas-00-Introduction).ipynb
+++ b/Module no 02- Python for Data Scientists/Pandas for Data Scientists/Lec-2.09_00(Pandas-00-Introduction).ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "057d0d63",
+   "id": "1c5eeab3",
    "metadata": {},
    "source": [
     "## So, what is Pandas and how is it used in AI?\n",
@@ -64,14 +64,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9704f75",
+   "id": "8c545960",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7ef63578",
+   "id": "bbfff419",
    "metadata": {},
    "source": [
     "## Key Features of Pandas\n",
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "072ed219",
+   "id": "154a603c",
    "metadata": {},
    "source": [
     "## Data Types\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a4cfebc",
+   "id": "79e0d20b",
    "metadata": {},
    "source": [
     "## What does Pandas deal with?\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d054024",
+   "id": "6a29def2",
    "metadata": {},
    "source": [
     "**In the example shown above, `Name` is a `series` and it is of the datatype – `Object` and it is treated as a character array. `Age` is another series and it is of the type – `Integer`. Third is the `Marks` is the third series and it is of the type `Integer` again.  The individual Series are one dimensional and hold only one data type. However, the `dataframe` as a whole contains more than 2 dimensions and is `heterogeneous` in nature.**"
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "312db0c1",
+   "id": "7a52570e",
    "metadata": {},
    "source": [
     "## Creating Series & data frames in python"
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bd06a7c",
+   "id": "5a045f36",
    "metadata": {},
    "source": [
     "#### Creating a simple Serie"
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1f176eef",
+   "id": "01cc499a",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "85b74f0b",
+   "id": "d52afd6f",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e87df528",
+   "id": "5c01187f",
    "metadata": {},
    "source": [
     "#### Creating multiple series"
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0567561c",
+   "id": "fd718105",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9aa93597",
+   "id": "75c79137",
    "metadata": {},
    "source": [
     "#### Creating Dataframe from multiple Series "
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "48741899",
+   "id": "1944e865",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb43e7f0",
+   "id": "dd085764",
    "metadata": {},
    "source": [
     "#### How to add new column to the dataframe"
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5f97fe6a",
+   "id": "afce35f1",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d2b6e67",
+   "id": "44b63561",
    "metadata": {},
    "source": [
     "## All statistical functions\n",
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b4c1928c",
+   "id": "7d666311",
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41da7373",
+   "id": "64285b50",
    "metadata": {},
    "source": [
     "## Input and Output\n",
@@ -534,18 +534,433 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6d315fb5",
+   "execution_count": 38,
+   "id": "338448b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>psl_year</th>\n",
+       "      <th>match_number</th>\n",
+       "      <th>team_1</th>\n",
+       "      <th>team_2</th>\n",
+       "      <th>inning</th>\n",
+       "      <th>over</th>\n",
+       "      <th>ball</th>\n",
+       "      <th>runs</th>\n",
+       "      <th>total_runs</th>\n",
+       "      <th>wickets</th>\n",
+       "      <th>is_four</th>\n",
+       "      <th>is_six</th>\n",
+       "      <th>is_wicket</th>\n",
+       "      <th>wicket</th>\n",
+       "      <th>wicket_text</th>\n",
+       "      <th>result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Islamabad United</td>\n",
+       "      <td>Quetta Gladiators</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Gladiators</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Islamabad United</td>\n",
+       "      <td>Quetta Gladiators</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Gladiators</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Islamabad United</td>\n",
+       "      <td>Quetta Gladiators</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Gladiators</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Islamabad United</td>\n",
+       "      <td>Quetta Gladiators</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Gladiators</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Islamabad United</td>\n",
+       "      <td>Quetta Gladiators</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Gladiators</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   psl_year  match_number            team_1             team_2  inning  over  \\\n",
+       "0      2016             1  Islamabad United  Quetta Gladiators       1     1   \n",
+       "1      2016             1  Islamabad United  Quetta Gladiators       1     1   \n",
+       "2      2016             1  Islamabad United  Quetta Gladiators       1     1   \n",
+       "3      2016             1  Islamabad United  Quetta Gladiators       1     1   \n",
+       "4      2016             1  Islamabad United  Quetta Gladiators       1     1   \n",
+       "\n",
+       "   ball  runs  total_runs  wickets  is_four  is_six  is_wicket  wicket  \\\n",
+       "0     1     0           0        0    False   False      False     NaN   \n",
+       "1     2     0           0        0    False   False      False     NaN   \n",
+       "2     3     0           0        0    False   False      False     NaN   \n",
+       "3     4     0           0        0    False   False      False     NaN   \n",
+       "4     5     0           0        0    False   False      False     NaN   \n",
+       "\n",
+       "  wicket_text      result  \n",
+       "0         NaN  Gladiators  \n",
+       "1         NaN  Gladiators  \n",
+       "2         NaN  Gladiators  \n",
+       "3         NaN  Gladiators  \n",
+       "4         NaN  Gladiators  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Read input file\n",
+    "df = pd.read_csv('datasets/psl.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "fe109601",
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = ['Alaa Abdelnaby','Zaid Abdul-Aziz','Kareem Abdul-Jabbar','Mahmoud Abdul-Rauf','Tariq Abdul-Wahad']\n"
+    "# Save a dataframe to CSV File\n",
+    "data = {'Name':['Captain America', 'Iron Man', 'Hulk', 'Thor','Black Panther'],\n",
+    "        'Rating':[100, 80, 84, 93, 90],\n",
+    "        'Place':['USA','USA','USA','Asgard','Wakanda']}\n",
+    "# Create dataframe from above dictionary\n",
+    "df = pd.DataFrame(data)\n",
+    "df.to_csv(\"datasets/avengers.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "2d36e942",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !ls datasets/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79f62f09",
+   "metadata": {},
+   "source": [
+    "## Aggregation\n",
+    "- The aggregation function can be applied against a single or more column. You can either apply the same aggregate function across various columns or different aggregate functions across various columns.\n",
+    "- Syntax : \n",
+    " >- DataFrame.aggregate(self, func, axis=0, *args, ***kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "39e07c45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>continent</th>\n",
+       "      <th>pop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>8425333.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>9240934.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>10267083.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>11537966.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>13079460.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  continent         pop\n",
+       "0      Asia   8425333.0\n",
+       "1      Asia   9240934.0\n",
+       "2      Asia  10267083.0\n",
+       "3      Asia  11537966.0\n",
+       "4      Asia  13079460.0"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_url = 'http://bit.ly/2cLzoxH'\n",
+    "# read data from url as pandas dataframe\n",
+    "gapminder = pd.read_csv(data_url)\n",
+    "gapminder_data = gapminder[['continent','pop']]\n",
+    "gapminder_data.head()\n",
+    "# gapminder.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "67eab43f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean of population :  29601212.32511736\n",
+      "Minimum value of population :  60011.0\n",
+      "Maximum value of population :  1318683096.0\n",
+      "Std of population :  106157896.74682792\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using Aggregate Functions on Series\n",
+    "mean  = gapminder_data['pop'].aggregate('mean')\n",
+    "print(\"Mean of population : \", mean)\n",
+    "\n",
+    "Min  = gapminder_data['pop'].aggregate('min')\n",
+    "print(\"Minimum value of population : \", Min)\n",
+    "\n",
+    "Max  = gapminder_data['pop'].aggregate('max')\n",
+    "print(\"Maximum value of population : \", Max)\n",
+    "\n",
+    "Std  = gapminder_data['pop'].aggregate('std')\n",
+    "print(\"Std of population : \", Std)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "b34349d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sum    5.044047e+10\n",
+       "min    6.001100e+04\n",
+       "max    1.318683e+09\n",
+       "Name: pop, dtype: float64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using multiple Aggregate Functions on Dataframe\n",
+    "gapminder_data['pop'].aggregate(['sum','min','max'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "3573ca7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pop</th>\n",
+       "      <th>lifeExp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>sum</th>\n",
+       "      <td>5.044047e+10</td>\n",
+       "      <td>101344.44468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>6.001100e+04</td>\n",
+       "      <td>23.59900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.318683e+09</td>\n",
+       "      <td>82.60300</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              pop       lifeExp\n",
+       "sum  5.044047e+10  101344.44468\n",
+       "min  6.001100e+04      23.59900\n",
+       "max  1.318683e+09      82.60300"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using multiple Aggregate Functions on Multiple columns of Dataframe\n",
+    "gapminder[['pop','lifeExp']].aggregate(['sum','min','max'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b994517",
+   "id": "c2df4bd8",
    "metadata": {},
    "outputs": [],
    "source": []
