Module no 02 - Python for Data Scientists

--- a/Module no 02- Python for Data Scientists/NumPy for Data Scientists/Lec-2.01(NumPy-01-ArrayCreation).ipynb
+++ b/Module no 02- Python for Data Scientists/NumPy for Data Scientists/Lec-2.01(NumPy-01-ArrayCreation).ipynb
@@ -8,7 +8,7 @@
     "---   \n",
     "\n",
     "<h1 align=\"center\">Introduction to Data Analyst and Data Science for beginners</h1>\n",
-    "<h1 align=\"center\">Lecture no 3.1(NumPy-01)</h1>\n",
+    "<h1 align=\"center\">Lecture no 2.1(NumPy-01)</h1>\n",
     "\n",
     "---\n",
     "<h3><div align=\"right\">Ehtisham Sadiq</div></h3>    "
@@ -2206,140 +2206,59 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "8203e71d",
+   "cell_type": "markdown",
+   "id": "61b18feb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1., 1., 1., 1.],\n",
-       "       [1., 1., 1., 1.],\n",
-       "       [1., 1., 1., 1.],\n",
-       "       [1., 1., 1., 1.],\n",
-       "       [1., 1., 1., 1.]])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "array = np.ones((5,4))\n",
-    "array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "d332ce80",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "array[1:-1,1:-1]=0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "a212eb9e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1., 1., 1., 1.],\n",
-       "       [1., 0., 0., 1.],\n",
-       "       [1., 0., 0., 1.],\n",
-       "       [1., 0., 0., 1.],\n",
-       "       [1., 1., 1., 1.]])"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "f1746e4e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 3, 4, 5, 5, 6, 9])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = np.array([2,3,4,5,5,6,9])\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "ae107d7c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# len(a)\n",
-    "a[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "02bfb19a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9\n",
-      "6\n",
-      "5\n",
-      "5\n",
-      "4\n",
-      "3\n",
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(len(a)-1, -1,-1):\n",
-    "#     print(i)\n",
-    "    print(a[i])"
+    "### Write a NumPy program to create a 2d array with 1 on the border and 0 inside.\n",
+    "```\n",
+    "Sample Output:\n",
+    "\n",
+    "Original array:                                                         \n",
+    "[[ 1.  1.  1.  1.  1.]                                                  \n",
+    " [ 1.  1.  1.  1.  1.]                                                  \n",
+    " [ 1.  1.  1.  1.  1.]                                                  \n",
+    " [ 1.  1.  1.  1.  1.]                                                  \n",
+    " [ 1.  1.  1.  1.  1.]]                                                 \n",
+    "1 on the border and 0 inside in the array                               \n",
+    "[[ 1.  1.  1.  1.  1.]                                                  \n",
+    " [ 1.  0.  0.  0.  1.]                                                  \n",
+    " [ 1.  0.  0.  0.  1.]                                                  \n",
+    " [ 1.  0.  0.  0.  1.]                                                  \n",
+    " [ 1.  1.  1.  1.  1.]]\n",
+    "```\n",
+    "<img src=\"images/python-numpy-image-exercise-8.png\" height=150px width=150px>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "edaf1de3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fea0faf8",
+   "metadata": {},
+   "source": [
+    "### Write a NumPy program to convert a list and tuple into arrays.(Hint: np.asarray())\n",
+    "```\n",
+    "Sample Output:\n",
+    "\n",
+    "List to array:                                                          \n",
+    "[1 2 3 4 5 6 7 8]                                                       \n",
+    "Tuple to array:                                                         \n",
+    "[[8 4 6]                                                                \n",
+    " [1 2 3]]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a6e3550",
    "metadata": {},
    "outputs": [],
    "source": []
