Module no 02 - Python for Data Scientists

--- a/Module no 02- Python for Data Scientists/NumPy for Data Scientists/Lec-2.01(NumPy-01-ArrayCreation).ipynb
+++ b/Module no 02- Python for Data Scientists/NumPy for Data Scientists/Lec-2.01(NumPy-01-ArrayCreation).ipynb
@@ -2207,7 +2207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61b18feb",
+   "id": "5e78a99a",
    "metadata": {},
    "source": [
     "### Write a NumPy program to create a 2d array with 1 on the border and 0 inside.\n",
@@ -2240,7 +2240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fea0faf8",
+   "id": "409bcc96",
    "metadata": {},
    "source": [
     "### Write a NumPy program to convert a list and tuple into arrays.(Hint: np.asarray())\n",
@@ -2258,7 +2258,106 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a6e3550",
+   "id": "1fac3898",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29fa5b1f",
+   "metadata": {},
+   "source": [
+    "### Write a NumPy program to find the number of elements of an array, length of one array element in bytes and total bytes consumed by the elements\n",
+    "```\n",
+    "Sample Output:\n",
+    "Size of the array:  3                                                  \n",
+    "Length of one array element in bytes:  8                               \n",
+    "Total bytes consumed by the elements of the array:  24\n",
+    "```\n",
+    "![](images/python-numpy-image-exercise-16.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb057d83",
+   "metadata": {},
+   "source": [
+    "### Write a NumPy program to get the unique elements of an array.(Hint: np.unique())\n",
+    "```\n",
+    "Sample Output:\n",
+    "Original array:                                                        \n",
+    "[10 10 20 20 30 30]                                                    \n",
+    "Unique elements of the above array:                                    \n",
+    "[10 20 30]                                                             \n",
+    "Original array:                                                        \n",
+    "[[1 1]                                                                 \n",
+    " [2 3]]                                                                \n",
+    "Unique elements of the above array:                                    \n",
+    "[1 2 3]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f553f9f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8505dc0",
+   "metadata": {},
+   "source": [
+    "### Write a NumPy program to construct an array by repeating.(Hint: np.tile())\n",
+    "```\n",
+    "Sample Output:\n",
+    "Original array                                                         \n",
+    "[1, 2, 3, 4]                                                           \n",
+    "Repeating 2 times                                                      \n",
+    "[1 2 3 4 1 2 3 4]                                                      \n",
+    "Repeating 3 times                                                      \n",
+    "[1 2 3 4 1 2 3 4 1 2 3 4]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6aa31e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "495fd354",
+   "metadata": {},
+   "source": [
+    "### Write a NumPy program to repeat elements of an array.\n",
+    "```\n",
+    "Sample Output:\n",
+    "[3 3 3 3]                                                              \n",
+    "[1 1 2 2 3 3 4 4]\n",
+    "```\n",
+    "![](images/python-numpy-image-exercise-26.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2dcc6e7b",
+   "metadata": {},
+   "source": [
+    "# NumPy - Assignment no 02\n",
+    "- Here is link of [NumPy - Assignment no 02](https://www.kaggle.com/code/ehtishamsadiq/numpy-assignment-no-02)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62da8512",
    "metadata": {},
    "outputs": [],
    "source": []
