Module no 02 - Python for Data Scientists

--- a/Module no 02- Python for Data Scientists/03 - Data Visualization with Matplotlib and Seaborn/Lec-2.24(Data-Visualization-01).ipynb
+++ b/Module no 02- Python for Data Scientists/03 - Data Visualization with Matplotlib and Seaborn/Lec-2.24(Data-Visualization-01).ipynb
@@ -8,18 +8,10 @@
     "---   \n",
     "\n",
     "<h1 align=\"center\">Introduction to Data Analyst and Data Science for beginners</h1>\n",
-    "<h1 align=\"center\">Lecture no 3.21(Data Visualization-I)</h1>\n",
+    "<h1 align=\"center\">Lecture no 2.24(Data Visualization-01)</h1>\n",
     "\n",
     "---\n",
     "<h3><div align=\"right\">Ehtisham Sadiq</div></h3>    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "05dbb7e4",
-   "metadata": {},
-   "source": [
-    "<h1 align=\"center\">Lecture 3.21 (Data Visualization-I)</h1>"
    ]
   },
   {
