Module no 02 - Python for Data Scientists

--- a/Module no 02- Python for Data Scientists/02 - Pandas for Data Scientists/Lec-2.12(Pandas-03-Overview-of-Pandas-Dataframe).ipynb
+++ b/Module no 02- Python for Data Scientists/02 - Pandas for Data Scientists/Lec-2.12(Pandas-03-Overview-of-Pandas-Dataframe).ipynb
@@ -70,22 +70,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "dba905d0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('1.3.4',\n",
-       " ['/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/pandas'])"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "pd.__version__ , pd.__path__"
@@ -104,7 +92,7 @@
    "id": "99a7442e",
    "metadata": {},
    "source": [
-    "<img align=\"right\" width=\"500\" height=\"500\"  src=\"images/pandas00.png\"  >\n",
+    "<img align=\"right\" width=\"400\" height=\"400\"  src=\"images/dataframe.png\"  >\n",
     "\n",
     "## 1. Creating a Dataframe\n",
     "<br><br>\n",
@@ -182,10 +170,28 @@
    "source": [
     "arr = np.random.randint(10,100, size= (6,5))\n",
     "print(\"Numpy Array:\\n\",arr)\n",
-    "\n",
-    "df = pd.DataFrame(data=arr)\n",
-    "print(\"Pandas Dataframe:\\n\",df)"
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11c0cb67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(data=arr)\n",
+    "print(\"Pandas Dataframe:\\n\")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "623b70e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -330,8 +336,8 @@
    "outputs": [],
    "source": [
     "people = {\n",
-    "    \"name\" : [\"Rauf\", \"Arif\", \"Maaz\", \"Hadeed\", \"Mujahid\", \"Mohid\"],\n",
-    "    \"age\" : [52, 51, 26, 22, 18, 17],\n",
+    "    \"name\" : [\"Ehtisham\", \"Ali\", \"Ayesha\", \"Dua\", \"Khubaib\", \"Adeen\"],\n",
+    "    \"age\" : [21, 20, 18, 17, 12, 10],\n",
     "    \"address\": [\"Lahore\", \"Karachi\", \"Lahore\", \"Islamabad\", \"Kakul\", \"Karachi\"],\n",
     "    \"cell\" : [\"321-123\", \"320-431\", \"321-478\", \"324-446\", \"321-967\", \"320-678\"],\n",
     "    \"bg\": [\"B+\", \"A-\", \"B+\", \"O-\", \"A-\", \"B+\"]\n",
@@ -402,8 +408,8 @@
    "outputs": [],
    "source": [
     "dict = {\n",
-    "    \"name\": pd.Series(['Arif', 'Hadeed', 'Mujahid']),\n",
-    "    \"age\": pd.Series([50, 22, 18]),\n",
+    "    \"name\": pd.Series(['Ehtisham', 'Ali', 'Ayesha']),\n",
+    "    \"age\": pd.Series([21, 19, 16]),\n",
     "    \"addr\": pd.Series(['Lahore', 'Islamabad','Karachi']),\n",
     "}\n",
     "df = pd.DataFrame(data=dict)\n",
@@ -433,12 +439,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict = {\n",
-    "    \"name\": pd.Series(data=['Arif', 'Hadeed', 'Mujahid', 'Maaz'], index=['a','b','c', 'd']),\n",
-    "    \"age\": pd.Series(data=[50, 22,np.nan, 18], index=['a','b','c','d']),\n",
+    "dict1 = {\n",
+    "    \"name\": pd.Series(data=['Ehtisham', 'Ali', 'Ayesha', 'Dua'], index=['a','b','c', 'd']),\n",
+    "    \"age\": pd.Series(data=[21, 22,np.nan, 18], index=['a','b','c','d']),\n",
     "    \"addr\": pd.Series(data=['Lahore', '', 'Peshawer','Karachi'], index=['a','b','c', 'd']),\n",
     "}\n",
-    "df = pd.DataFrame(dict)\n",
+    "df = pd.DataFrame(dict1)\n",
     "df"
    ]
   },
@@ -467,7 +473,15 @@
    "id": "558777d2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dict1 = {\n",
+    "    \"name\": pd.Series(data=['Ehtisham', 'Ali', 'Ayesha', 'Dua'], index=['a','b','c', 'd']),\n",
+    "    \"age\": pd.Series(data=[21, 22,np.nan, 18], index=['a','x','y','d']),\n",
+    "    \"addr\": pd.Series(data=['Lahore', '','Karachi'], index=['a', 'd', 'x']),\n",
+    "}\n",
+    "df = pd.DataFrame(dict1)\n",
+    "df"
+   ]
   },
   {
    "cell_type": "code",
@@ -475,15 +489,7 @@
    "id": "4c16eeab",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "dict = {\n",
-    "    \"name\": pd.Series(['Arif', 'Hadeed', 'Mujahid', 'Maaz'], index=['a','b','c', 'd']),\n",
-    "    \"age\": pd.Series([50, 22,np.nan, 18], index=['a','x','y','d']),\n",
-    "    \"addr\": pd.Series(['Lahore', '','Karachi'], index=['a', 'd', 'x']),\n",
-    "}\n",
-    "df = pd.DataFrame(dict)\n",
-    "df"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -529,12 +535,13 @@
    "outputs": [],
    "source": [
     "people = {\n",
-    "    \"name\" : [\"Rauf\", \"Arif\", \"Maaz\", \"Hadeed\", \"Mujahid\", \"Mohid\"],\n",
-    "    \"age\" : [52, 51, 26, 22, 18, 17],\n",
+    "    \"name\" : [\"Ehtisham\", \"Ali\", \"Ayesha\", \"Dua\", \"Khubaib\", \"Adeen\"],\n",
+    "    \"age\" : [21, 20, 18, 17, 12, 10],\n",
     "    \"address\": [\"Lahore\", \"Karachi\", \"Lahore\", \"Islamabad\", \"Kakul\", \"Karachi\"],\n",
     "    \"cell\" : [\"321-123\", \"320-431\", \"321-478\", \"324-446\", \"321-967\", \"320-678\"],\n",
     "    \"bg\": [\"B+\", \"A-\", \"B+\", \"O-\", \"A-\", \"B+\"]\n",
     "}\n",
+    "# people\n",
     "\n",
     "df_people = pd.DataFrame(data=people, index=['MS01', 'MS02', 'MS03', 'MS04', 'MS05', 'MS06'])\n",
     "df_people"
@@ -728,6 +735,41 @@
     "# non-null values count in each column, datatype and memory usage\n",
     "df_people.info()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "accaa40a",
+   "metadata": {},
+   "source": [
+    "#### The `df.describe()` Method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d63404aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This method prints the descriptive view of all the columns of dataset which are numeric\n",
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5feea8a4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "453eb48b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
