--- a/Module no 02- Python for Data Scientists/02 - Pandas for Data Scientists/Lec-2.13(Pandas-04-IO-with-CSV-EXCEL-and-JSON-Files).ipynb
+++ b/Module no 02- Python for Data Scientists/02 - Pandas for Data Scientists/Lec-2.13(Pandas-04-IO-with-CSV-EXCEL-and-JSON-Files).ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d85d4c7a",
    "metadata": {},
    "outputs": [],
@@ -90,18 +90,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b96c7461",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('1.3.4',\n",
-       " ['/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/pandas'])"
+       "('1.4.2', ['/home/dell/.local/lib/python3.8/site-packages/pandas'])"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
